--- a/src/styles/components/main.scss
+++ b/src/styles/components/main.scss
@@ -2,7 +2,6 @@
     width: 100%;
     height: 100%;
     color: white;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,9 +15,8 @@
     overflow-y: auto;
 
     &-container {
-        margin-top: 40px;
-        height: 100%;
-        width: 100%;
+        margin-top: 20px;
+        max-width: 1368px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
