--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -4,7 +4,7 @@
 
     background-color: white;
 
-    margin-bottom: 20px;
+    margin: 20px 10px;
 
     border-radius: 3px;
     box-shadow: 2px 2px 10px lightgray;
