--- a/src/styles/components/login.scss
+++ b/src/styles/components/login.scss
@@ -28,8 +28,6 @@
         color: black;
         text-align: center;
 
-
-
         &__forgotText {
             margin-top: 15px;
 
@@ -41,11 +39,31 @@
 
         &__items {
             margin: 10px;
+        
 
             &__input {
                 border-radius: 2px;
                 border: 1px solid lightgray;
-                box-shadow: 0 8px 6px -6px gray;
+                height: 70%;
+                width: 100%;
+
+                &__submitButn {
+                    border-radius: 5px;
+                    background-color: #F0F8FF;
+                    background-color: #00BFFF;
+                    width: 100%;
+                    margin-top: 3px;
+                    padding: 5px 40px 5px;
+                    color: black;
+                    border: 1px solid lightgray;
+                    cursor: pointer;
+        
+                    &:hover {
+                        background-color: #80D3FF;
+                        width: 100%;
+                        color: #7B7B7B;
+                    }
+                }
             }
         }
     }
