--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -127,7 +127,6 @@
     &__attendance {
         color: #7B7B7B;
         
-
         /*form items styling*/
         &__container{
             text-align: center;
@@ -166,6 +165,44 @@
                             background-color: #F0F8FF;
                             cursor: pointer;
                     }
+            }
+        }
+    }
+    &__missing {
+        color: black;
+        margin: 10px;
+        padding: 5px;
+
+        &__headers {
+            display: flex;
+            justify-content: space-around;
+            p {
+                margin: 0;
+            }
+        }
+
+            &__container {
+                background-color: #EEEEEE;
+                color: black;
+                display: flex;
+                justify-content: space-around;
+                text-align: center;
+                margin-bottom: 5px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                p {
+                    margin: 1px;
+                }
+
+                &__student {
+                    background-color: #FF8080;
+                    width: 60px;
+            
+                    &__assignment {
+                        background-color: #C080FF;
+                        width: 80px;
+                }
+                
             }
         }
     }
