--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -168,7 +168,7 @@
             }
         }
     }
-    &__missing {
+    &__missing  {
         color: black;
         margin: 10px;
         padding: 5px;
@@ -196,6 +196,44 @@
 
                 &__student {
                     background-color: #FF8080;
+                    width: 60px;
+            
+                    &__assignment {
+                        background-color: #C080FF;
+                        width: 80px;
+                }
+                
+            }
+        }
+    }
+    &__submitted {
+        color: black;
+        margin: 10px;
+        padding: 5px;
+
+        &__headers {
+            display: flex;
+            justify-content: space-around;
+            p {
+                margin: 0;
+            }
+        }
+
+            &__container {
+                background-color: #EEEEEE;
+                color: black;
+                display: flex;
+                justify-content: space-around;
+                text-align: center;
+                margin-bottom: 5px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+                p {
+                    margin: 1px;
+                }
+
+                &__student {
+                    background-color: #80FFAC;
                     width: 60px;
             
                     &__assignment {
