--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -206,4 +206,79 @@
             }
         }
     }
+    //end __missing
+    &__recent {
+        color: black;
+        margin: 2px;
+        padding: 10px;
+        height: 360px;
+        overflow-y: auto;
+        font-size: 0.7rem;
+        &__headers {
+            display: flex;
+            justify-content: space-around;
+            p {
+                margin: 0;
+            }
+        }
+
+            &__container {
+                background-color: #EEEEEE;
+                color: black;
+                display: flex;
+                justify-content: left;
+                align-items: center;
+                text-align: center;
+                margin-bottom: 5px;
+                padding: 5px 0;
+                height: 50px;
+
+                &__student {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: rgb(181, 198, 207);
+                    min-width: 70px;
+                    height: 35px;
+            
+                    &__module {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        background-color: rgb(128, 255, 172);
+                        width: 100%;
+                        height: 35px;
+                        padding: 10px;
+                        a {
+                            text-decoration: none;
+                            color: black;
+                        }
+                        &:hover{
+                            cursor: pointer;
+                            background-color: rgb(124, 209, 154)
+                        }
+                    
+                }
+                    &__sprint {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        background-color: rgb(128, 211, 255);
+                        width: 100%;
+                        height: 35px;
+                        padding: 10px;
+                        a {
+                            text-decoration: none;
+                            color: black;
+                        }
+                        &:hover{
+                            cursor: pointer;
+                            background-color: rgb(124, 193, 230);
+                        }
+                
+                }
+            }
+        }
+    }
+    //end __recent
 }
