--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -1,11 +1,9 @@
-.review {
+.review, .reviewStudent {
     color: black;
-
     width: 350px;
     height: 400px;
     background-color: white;
-
-    margin: 200px 10px;
+    margin: 50px 10px;
 
     border-radius: 3px;
     box-shadow: 2px 2px 10px lightgray;
@@ -17,10 +15,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-        
+            justify-content: space-around;
+
             &__smallcontainer { 
              background-color: #EEEEEE;
-             padding: 5px;
+             padding: 20px;
              margin: 5px;
              width: 80%;
              display: flex;
