--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -1,19 +1,20 @@
 .about {
     color: black;
-    width: 350px;
-    height: 400px;
     background-color: white;
-    margin: 50px 10px;
+    margin: 200px 10px;
     text-align: center;
     border-radius: 3px;
     box-shadow: 2px 2px 10px lightgray;
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: space-around;
     
         &__container {
-            background-color: white;
+            margin: 20px;
             width: 350px;
             height: 350px;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: space-around;
 
