--- a/src/styles/components/main.scss
+++ b/src/styles/components/main.scss
@@ -14,6 +14,15 @@
     );
     overflow-y: auto;
 
+    .main-cont{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow-y: auto;
+        border: 1px solid red;
+    }
     &-container {
         margin-top: 20px;
         max-width: 1368px;
