--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -1,7 +1,7 @@
 .review, .reviewStudent {
     color: black;
     width: 350px;
-    height: 400px;
+    // height: 400px;
     background-color: white;
     margin: 50px 10px;
 
@@ -11,7 +11,7 @@
         &__container {
             background-color: white;
             width: 350px;
-            height: 400px;
+            // height: 400px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -23,8 +23,19 @@
              margin: 5px;
              width: 80%;
              display: flex;
+             flex-direction: column;
              justify-content: space-between;
             
+            select{
+                height: 35px;
+                border-radius: 3px;
+                font-size: 1rem;
+            }
+            input{
+                height: 35px;
+                border-radius: 3px;
+                font-size: 1rem;
+            }
                 &__submitBtn {
                     border-radius: 5px;
                     background-color: #80D3FF;
@@ -41,6 +52,14 @@
                 }
 
                 &--item {
+                    background-color: #F0F8FF;
+                }
+
+                &--selected {
+                    height: 35px;
+                    // border: 1px solid grey;
+                    padding: 6px;
+                    border-radius: 3px;
                     background-color: #F0F8FF;
             }
         }
