--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -62,6 +62,34 @@
                     border-radius: 3px;
                     background-color: #F0F8FF;
             }
+            .stars{
+                width: 50px;
+                display: flex;
+                justify-content: space-between;
+                font-size: 40px;
+                .star-false{
+                    margin: 0 5px;
+                    color: grey;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: black;
+                    transition: all 300ms;
+                    &:hover{
+                        cursor: pointer;
+                        transform: scale(1.3);
+                    }
+                }
+                .star-true{
+                    margin: 0 5px;
+                    color: yellow;
+                    -webkit-text-stroke-width: 1px;
+                    -webkit-text-stroke-color: black;
+                    transition: all 500ms;
+                    &:hover{
+                        cursor: pointer;
+                        transform: scale(1.3);
+                    }
+                }
+            }
         }
     }
 }
