--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -31,8 +31,8 @@
                 border-radius: 3px;
                 font-size: 1rem;
             }
-            input{
-                height: 35px;
+            textarea{
+                height: 55px;
                 border-radius: 3px;
                 font-size: 1rem;
             }
@@ -70,8 +70,7 @@
                 .star-false{
                     margin: 0 5px;
                     color: grey;
-                    -webkit-text-stroke-width: 1px;
-                    -webkit-text-stroke-color: black;
+                    -webkit-text-stroke: 1px black;
                     transition: all 300ms;
                     &:hover{
                         cursor: pointer;
@@ -81,8 +80,7 @@
                 .star-true{
                     margin: 0 5px;
                     color: yellow;
-                    -webkit-text-stroke-width: 1px;
-                    -webkit-text-stroke-color: black;
+                    -webkit-text-stroke: 1px black;
                     transition: all 500ms;
                     &:hover{
                         cursor: pointer;
