--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -275,11 +275,13 @@
                 text-align: center;
                 margin-bottom: 5px;
                 padding: 5px 0;
+                width: 100%;
                 height: 50px;
-                a {
+                a{
                     text-decoration: none;
                     color: black;
-                }
+                };
+
                 &__student {
                     display: flex;
                     flex-direction: column;
@@ -304,6 +306,7 @@
                         width: 100%;
                         height: 35px;
                         padding: 10px;
+                        transition: all 500ms;
                         &:hover{
                             cursor: pointer;
                             background-color: rgb(176, 255, 204)
@@ -318,6 +321,7 @@
                         width: 100%;
                         height: 35px;
                         padding: 10px;
+                        transition: all 500ms;
                         &:hover{
                             cursor: pointer;
                             background-color: rgb(189, 229, 251);
@@ -331,8 +335,9 @@
                 justify-content: center;
                 background-color: rgb(241, 201, 201);
                 width: 45px;
-                height: 35px;
+                height: 35.5px;
                 padding: 10px;
+                transition: all 500ms;
                 &:hover{
                     cursor: pointer;
                     background-color: rgb(245, 213, 255);
