--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -19,6 +19,7 @@
 
             &__smallcontainer { 
              background-color: #EEEEEE;
+             border-radius: 3px;
              padding: 20px;
              margin: 5px;
              width: 80%;
@@ -85,20 +86,22 @@
                     margin: 0 5px;
                     color: grey;
                     -webkit-text-stroke: 1px black;
-                    transition: all 300ms;
+                    transition: all 700ms;
                     &:hover{
                         cursor: pointer;
                         transform: scale(1.3);
+                        color: rgb(177, 182, 102);
                     }
                 }
                 .star-true{
                     margin: 0 5px;
                     color: yellow;
                     -webkit-text-stroke: 1px black;
-                    transition: all 500ms;
+                    transition: all 700ms;
                     &:hover{
                         cursor: pointer;
                         transform: scale(1.3);
+                        color: rgb(177, 182, 102);
                     }
                 }
             }
