--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -17,6 +17,19 @@
             align-items: center;
             justify-content: space-around;
 
+            &__header { 
+                color: white;
+                font-weight: 700;
+                background-color: #1b212d;
+                border-radius: 3px 0 0 0;
+                padding: 20px;
+                margin-bottom: 10px;
+                width: 100%;
+                height: 40px;
+                display: flex;
+                align-items: center;
+            }
+
             &__smallcontainer { 
              background-color: #EEEEEE;
              border-radius: 3px;
@@ -28,6 +41,11 @@
              justify-content: space-between;
             
             select{
+                height: 35px;
+                border-radius: 3px;
+                font-size: 1rem;
+            }
+            input{
                 height: 35px;
                 border-radius: 3px;
                 font-size: 1rem;
