--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -107,7 +107,20 @@
                         }
                     }
 
-                    &__right {
+                    &__right--Completed {
+                        height: auto;
+                        width: calc(100% - 30px);
+                        display: flex;
+                        align-items: center;
+                        padding: 5px 0 5px 10px;
+                        background: #eee;
+                        p {
+                            font-size: 0.7rem;
+                            margin: 0;
+                            color: darkgrey;
+                        }
+                    }
+                    &__right--In-Progress {
                         height: auto;
                         width: calc(100% - 30px);
                         display: flex;
