--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -208,15 +208,28 @@
             text-align: center;
             align-items: center;
             margin: 0 auto;
-
+            #submit{
+                display: flex;
+                justify-content: center;
+                border: none;
+                background-color: white; 
+            }
             /*more form items styling*/
             &__smallcontainer {
                 display: flex;
+                // justify-content: center;
                 border: 1px solid lightgray;
                 background-color: #EEEEEE;        
                 margin: 5px;
-                padding: 2px;
+                padding: 3px 5px;
                 font-size: 0.9rem;
+                select{
+                    border-radius: 3px;
+                    margin-left: 3px;
+                }
+                input{
+                    border-radius: 3px;
+                }
                 .date{
                     width: 100%;
                     display: flex;
@@ -245,26 +258,82 @@
                         margin-right: 20px;
                     }
                 }
-
-                    /*button styling*/
-                    &__submitBtn {
-                        border-radius: 5px;
-                        background-color: #F0F8FF;
-                        background-color: #80D3FF;
-                        width: 60%;
-                        margin-top: 3px;
-                        padding-top: 3px;
-                        padding-bottom: 3px;
-                        color: black;
-                        border: 1px solid lightgray;
-                        cursor: pointer;
-
-                        &:hover {
-                            background-color: #00BFFF;
-                            width: 60%;
-                            color: #7B7B7B;
+                .students{
+                    width: 100%;
+                    // border: 1px solid red;
+                    height: 188px;
+                    overflow-y: auto;
+                    &--labels{
+                        display: flex;
+                        justify-content: space-between;
+                        font-size: 0.7rem;
+                        #notes{
+                            margin-left: -60px;
                         }
                     }
+                    &--list{
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        &--container{
+                            display: flex;
+                            // flex-direction: column;
+                            justify-content: space-between;
+                            align-items: center;
+                            position: relative;
+                            .names{
+                                display: flex;
+                                align-items: center;
+                                color: black;
+                                // min-width: 120px;
+                                // max-width: 100%;
+                                height: 22px;
+                                overflow: hidden;
+                            }
+                            textarea.notes{
+                                // border: 1px solid purple;
+                                width: 190px;
+                                position: absolute;
+                                height: 20px;
+                                margin: 2px;
+                                top: -1px;
+                                right: 20px;
+                            }
+                        }
+                    }
+                }
+
+                    /*button styling*/
+                    &__submitBtn{
+                        border-radius: 3px;
+                        background-color: rgb(171, 203, 214);
+                        padding: 4px 25px;
+                        color: white;
+                        border: 1px solid lightgray;
+                        cursor: pointer;
+                        &:hover {
+                            background-color: rgb(184, 228, 243);
+                            color: rgb(255, 255, 255);
+                        }
+                    }
+                    // &__submitBtn {
+                    //     border-radius: 5px;
+                    //     background-color: #F0F8FF;
+                    //     background-color: #80D3FF;
+                    //     width: 60%;
+                    //     margin-top: 3px;
+                    //     padding-top: 3px;
+                    //     padding-bottom: 3px;
+                    //     color: black;
+                    //     border: 1px solid lightgray;
+                    //     cursor: pointer;
+
+                    //     &:hover {
+                    //         background-color: #00BFFF;
+                    //         width: 60%;
+                    //         color: #7B7B7B;
+                    //     }
+                    // }
                         /*curving edges for form selects, input */
                         &--item {
                             width: 150px;
