Change attendance textarea to input

--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -379,9 +379,9 @@
                                 height: 22px;
                                 overflow: hidden;
                             }
-                            textarea.notes{
+                            input.notes{
                                 // border: 1px solid purple;
-                                width: 190px;
+                                width: 188px;
                                 position: absolute;
                                 height: 20px;
                                 margin: 2px;
