--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -22,6 +22,16 @@
 
         padding-left: 15px;
     }
+    .grades-chart{
+        // margin-top: 10px;
+        padding: 3px 10px 0 10px;
+        &-title{
+            text-align: center;
+            color: black;
+            font-size: 0.9rem;
+            margin-bottom: 3px;
+        }
+    }
 
     &__alert {
         height: 390px;
