--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -32,6 +32,16 @@
             margin-bottom: 3px;
         }
     }
+    .attendance-chart{
+        // margin-top: 10px;
+        padding: 3px 10px 0 10px;
+        &-title{
+            text-align: center;
+            color: black;
+            font-size: 0.9rem;
+            margin-bottom: 10px;
+        }
+    }
 
     &__alert {
         height: 390px;
