--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -420,6 +420,7 @@
                         color: white;
                         border: 1px solid lightgray;
                         cursor: pointer;
+                        transition: all 300ms;
                         &:hover {
                             background-color: rgb(184, 228, 243);
                             color: rgb(255, 255, 255);
