--- a/src/styles/components/about.scss
+++ b/src/styles/components/about.scss
@@ -20,6 +20,9 @@
             &__smallcontainer {
                 background-color: #EEEEEE;
                 padding: 0px 25px 0px 25px;
+                img{
+                    margin-top: 20px;
+                }
             }
         }
 }
