--- a/src/styles/components/tile.scss
+++ b/src/styles/components/tile.scss
@@ -7,7 +7,7 @@
     margin: 20px 10px;
 
     border-radius: 3px;
-    box-shadow: 2px 2px 10px lightgray;
+    box-shadow: 3px 5px 20px rgb(149, 149, 149);
 
     &__header {
         width: 100%;
@@ -79,6 +79,7 @@
             &__box {
                 width: 50px;
                 height: 50px;
+                border-radius: 5px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -165,7 +166,7 @@
                     &__left {
                         height: 40px;
                         width: 40px;
-
+                        border-radius: 5px 0 0 5px;
                         display: flex;
                         justify-content: center;
                         align-items: center;
@@ -195,6 +196,7 @@
                         width: calc(100% - 40px);
                         display: flex;
                         align-items: center;
+                        // border-radius: 0 5px 5px 0;
                         padding: 5px 0 5px 10px;
                         background: #eee;
                         p {
@@ -208,6 +210,7 @@
                         width: calc(100% - 40px);
                         display: flex;
                         align-items: center;
+                        // border-radius: 0 5px 5px 0;
                         padding: 5px 0 5px 10px;
                         background: #eee;
                         p {
@@ -255,6 +258,7 @@
                     border-radius: 3px;
                     margin-left: 3px;
                     height: 30px;
+                    max-width: 275px;
                 }
                 input[type=checkbox]{
                     position: absolute;
@@ -371,7 +375,7 @@
                     width: 100%;
                     // border: 1px solid red;
                     height: 178px;
-                    overflow-y: auto;
+                    // overflow-y: auto;
                     &--labels{
                         display: flex;
                         justify-content: space-between;
@@ -470,24 +474,31 @@
         font-size: 0.8rem;
         overflow-y: auto;
         overflow-x: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         &__headers {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
+            width: 320px;
+            border-bottom: 1px solid black;
             p {
-                margin: 0;
+                margin: 0 12px;
+                font-weight: 600;
             }
         }
 
             &__container {
-                background-color: #EEEEEE;
+                // background-color: #EEEEEE;
                 color: black;
                 display: flex;
                 justify-content: left;
                 align-items: center;
                 text-align: center;
-                margin-bottom: 5px;
+                margin-bottom: 3px;
                 padding: 5px 0;
-                height: 65px;
+                // border-radius: 5px;
+                height: 50px;
                 a {
                     text-decoration: none;
                     color: black;
@@ -499,12 +510,18 @@
                     align-items: center;
                     justify-content: center;
                     min-width: 70px;
-                    height: 60px;
-                    background-color: rgb(212, 212, 212);
+                    height: 40px;
+                    border-radius: 5px 0 0 5px;
+                    // border: 1px solid rgb(149, 149, 149);
+                    // background-color: rgb(68, 59, 190);
+                    // color: white;
+                    // border-bottom: 1px solid black;
+                    font-weight: 500;
                     transition: all 300ms;
                     &:hover{
                         cursor: pointer;
-                        background-color: rgb(230, 230, 230)
+                        color: white;
+                        background-color: #C080FF
                     }
                     p{
                         margin: 1px;
@@ -514,9 +531,13 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        background-color: rgb(128, 255, 172);
-                        width: 260px;
-                        height: 60px;
+                        // background-color: rgb(94, 231, 142);
+                        // color: white;
+                        // border-top: 1px solid rgb(94, 231, 142);
+                        border-bottom: 2px solid rgb(94, 231, 142);
+                        // font-weight: 200;
+                        width: 240px;
+                        height: 40px;
                         padding: 10px;
                         transition: all 300ms;
                         &:hover{
@@ -530,10 +551,15 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    background-color: rgb(128, 211, 255);
-                    width: 260px;
-                    height: 60px;
+                    // background-color: rgb(83, 195, 255);
+                    // border-top: 1px solid rgb(83, 195, 255);
+                    border-bottom: 2px solid rgb(83, 195, 255);
+                    // color: white;
+                    // font-weight: 600;
+                    width: 240px;
+                    height: 40px;
                     padding: 10px;
+                    // border-radius: 0 5px 5px 0;
                     transition: all 300ms;
                     &:hover{
                         cursor: pointer;
