Updated login error message

--- a/src/styles/components/login.scss
+++ b/src/styles/components/login.scss
@@ -31,6 +31,9 @@
 
         &__forgotText {
             margin-top: 15px;
+            span{
+                color: red;
+            }
 
             &__forgotLinks {
                 text-decoration: none;
